--- a/config/locales/admin/courses/courses.vi.yml
+++ b/config/locales/admin/courses/courses.vi.yml
@@ -37,7 +37,7 @@ vi:
         update_course: "Cập Nhật Khóa Học"
         save_change: "Lưu Thay Đổi"
       show:
-        add_lesson: "Thêm Bài Học +"
+        manage_lesson: "Quản Lý Bài Học"
         edit_course: "Sửa Khóa Học"
         back_to_list: "Quay Lại Danh Sách Khóa Học"
         course_details: "Chi Tiết Khóa Học"
