--- a/config/locales/base/base.en.yml
+++ b/config/locales/base/base.en.yml
@@ -7,7 +7,7 @@ en:
     home: "Home"
     help: "Help"
     contact: "Contact"
-    microposts: "Microposts"
+    courses: "Courses"
     sign_up: "Sign up"
     log_in: "Log in"
     account: "Account"
