--- a/config/locales/base/base.vi.yml
+++ b/config/locales/base/base.vi.yml
@@ -7,7 +7,7 @@ vi:
     home: "Trang chủ"
     help: "Trợ giúp"
     contact: "Liên hệ"
-    microposts: "Bài viết"
+    courses: "Khóa học"
     sign_up: "Đăng ký"
     log_in: "Đăng nhập"
     account: "Tài khoản"
