--- a/config/locales/user/courses/courses.vi.yml
+++ b/config/locales/user/courses/courses.vi.yml
@@ -1,6 +1,15 @@
 vi:
   user:
     courses:
+      index:
+        title: "Danh sách khóa học"
+        thumbnail: "Hình thu nhỏ khóa học"
+        enroll: "Đăng ký"
+        enrolled: "Đã đăng ký"
+        learner_count: "%{count} người học đã đăng ký"
+        view_details: "Xem chi tiết"
+      create:
+        please_log_in: "Vui lòng đăng nhập để truy cập trang này."
       show:
         error:
           not_authenticated: "Bạn cần đăng nhập với tài khoản người dùng để xem khóa học này."
