See test history

--- a/config/locales/user/lessons/lessons.en.yml
+++ b/config/locales/user/lessons/lessons.en.yml
@@ -23,3 +23,51 @@ en:
         heading: "Word list for Lesson %{number}: %{title}"
         actions:
           back_to_lesson: "Back to Lesson"
+      take_test:
+        title: "Take Test for Lesson %{number}: %{title}"
+        instructions: "Please answer the following questions to complete the test."
+        submit: "Submit Test"
+        error:
+          validation_failed: "There were errors in your submission: %{errors}"
+          rollback_failed: "An error occurred while processing your test. Please try again."
+          unexpected: "An unexpected error occurred. Please try again later."
+          test_not_found: "Test not found for this lesson."
+          max_attempts_reached: "You have reached the maximum number of attempts for this test."
+          no_answers_provided: "You must provide answers to the test questions."
+          multiple_answers_selected: "You cannot select multiple answers for a single-choice question."
+        attempt: "Attempt: "
+        duration: "Duration: "
+        time_remaining: "Time Remaining: "
+        minutes: "minutes"
+        question: "Question %{number}: "
+        submit: "Submit Test"
+        confirm_submission: "Are you sure you want to submit the test?"
+        back_to_lesson: "Back to Lesson"
+      submit_test:
+        title: "Take Test for Lesson %{number}: %{title}"
+        instructions: "Please answer the following questions to complete the test."
+        submit: "Submit Test"
+        error:
+          validation_failed: "There were errors in your submission: %{errors}"
+          rollback_failed: "An error occurred while processing your test. Please try again."
+          unexpected: "An unexpected error occurred. Please try again later."
+          test_not_found: "Test not found for this lesson."
+          max_attempts_reached: "You have reached the maximum number of attempts for this test."
+          no_answers_provided: "You must provide answers to the test questions."
+          multiple_answers_selected: "You cannot select multiple answers for a single-choice question."
+        passed: "Congratulations! You passed the test with %{score}/%{total}. The lesson is now completed and the vocabulary has been added to your collection."
+        failed: "You scored %{score}/%{total}. You need to have at least 80% correct answers to pass. You have %{remaining_attempts} attempts left."
+      test_history:
+        title: "Test History for Lesson %{number}: %{title}"
+        test: " Lesson %{number}: %{lesson_title} - Test"
+        not_started: "Not started"
+        passed: "Passed"
+        failed: "Failed"
+        best_result: "Best Result: %{score}/%{total}"
+        attempt_number: "Attempt #%{attempt}"
+        result: "Result: %{score}/%{total}"
+        date: "Date: %{date}"
+        see_details: "See Details >>"
+        no_attempts: "No test attempts found for this lesson."
+        back_to_lesson: "← Back to Lesson"
+        test_not_found: "Test not found for this lesson."
