--- a/config/locales/user/lessons/lessons.vi.yml
+++ b/config/locales/user/lessons/lessons.vi.yml
@@ -23,3 +23,51 @@ vi:
         heading: "Danh sách từ vựng cho Bài học %{number}: %{title}"
         actions:
           back_to_lesson: "Quay lại Bài học"
+      take_test:
+        title: "Làm bài kiểm tra cho Bài học %{number}: %{title}"
+        instructions: "Vui lòng trả lời các câu hỏi sau để hoàn thành bài kiểm tra."
+        submit: "Nộp bài kiểm tra"
+        error:
+          validation_failed: "Có lỗi trong việc gửi bài kiểm tra: %{errors}"
+          rollback_failed: "Đã xảy ra lỗi khi xử lý bài kiểm tra. Vui lòng thử lại."
+          unexpected: "Đã xảy ra lỗi không mong đợi. Vui lòng thử lại sau."
+          test_not_found: "Không tìm thấy bài kiểm tra cho bài học này."
+          max_attempts_reached: "Bạn đã đạt đến số lần thử tối đa cho bài kiểm tra này."
+          no_answers_provided: "Bạn phải cung cấp câu trả lời cho các câu hỏi của bài kiểm tra."
+          multiple_answers_selected: "Bạn không thể chọn nhiều câu trả lời cho một câu hỏi đơn lựa chọn."
+        attempt: "Lần thử: "
+        duration: "Thời gian: "
+        time_remaining: "Thời gian còn lại: "
+        minutes: "phút"
+        question: "Câu hỏi %{number}: "
+        submit: "Nộp bài"
+        confirm_submission: "Bạn có chắc chắn muốn nộp bài kiểm tra không?"
+        back_to_lesson: "Quay lại Bài học"
+      submit_test:
+        title: "Làm bài kiểm tra cho Bài học %{number}: %{title}"
+        instructions: "Vui lòng trả lời các câu hỏi sau để hoàn thành bài kiểm tra."
+        submit: "Nộp bài kiểm tra"
+        error:
+          validation_failed: "Có lỗi trong việc gửi bài kiểm tra: %{errors}"
+          rollback_failed: "Đã xảy ra lỗi khi xử lý bài kiểm tra. Vui lòng thử lại."
+          unexpected: "Đã xảy ra lỗi không mong đợi. Vui lòng thử lại sau."
+          test_not_found: "Không tìm thấy bài kiểm tra cho bài học này."
+          max_attempts_reached: "Bạn đã đạt đến số lần thử tối đa cho bài kiểm tra này."
+          no_answers_provided: "Bạn phải cung cấp câu trả lời cho các câu hỏi của bài kiểm tra."
+          multiple_answers_selected: "Bạn không thể chọn nhiều câu trả lời cho một câu hỏi đơn lựa chọn."
+        passed: "Chúc mừng! Bạn đã vượt qua bài kiểm tra với %{score}/%{total}. Bài học đã được hoàn thành và từ vựng đã được thêm vào bộ sưu tập của bạn."
+        failed: "Bạn đã đạt %{score}/%{total} điểm. Bạn cần 80% để vượt qua. Còn %{remaining_attempts} lần thử nữa."
+      test_history:
+        title: "Lịch sử bài kiểm tra cho Bài học %{number}: %{title}"
+        test: "Bài kiểm tra cho Bài số %{number}: %{lesson_title}"
+        not_started: "Chưa bắt đầu"
+        passed: "Thành công"
+        failed: "Thất bại"
+        best_result: "Kết quả tốt nhất: %{score}/%{total}"
+        attempt_number: "Lần thử: #%{attempt}"
+        result: "Kết quả: %{score}/%{total}"
+        date: "Ngày: %{date}"
+        see_details: "Xem chi tiết >>"
+        no_attempts: "Không tìm thấy lần thử nào cho bài học này."
+        back_to_lesson: "← Quay lại Bài học"
+        test_not_found: "Không tìm thấy bài kiểm tra cho bài học này."
