--- a/config/locales/active_record/activerecord.vi.yml
+++ b/config/locales/active_record/activerecord.vi.yml
@@ -3,6 +3,7 @@ vi:
     models:
       product: "Sản phẩm"
       user: "Người dùng"
+
     attributes:
       product:
         name: "Tên sản phẩm"
@@ -13,14 +14,6 @@ vi:
         password: "Mật khẩu"
         password_confirmation: "Xác nhận mật khẩu"
         gender: "Giới tính"
-    errors:
-      models:
-        user:
-          attributes:
-            birthday:
-              too_old: "phải nằm trong vòng 100 năm trở lại"
-              in_future: "không được nằm trong tương lai"
-    attributes:
       question:
         content: "Nội dung câu hỏi"
         question_type: "Loại câu hỏi"
@@ -29,8 +22,31 @@ vi:
         duration: "Thời gian"
         max_attempts: "Số lần làm tối đa"
         description: "Mô tả"
+
     enums:
+      user:
+        gender:
+          male: "Nam"
+          female: "Nữ"
+          other: "Khác"
+      user_course:
+        enrolment_status:
+          pending: "Chờ duyệt"
+          approved: "Đã duyệt"
+          rejected: "Bị từ chối"
+          in_progress: "Đang học"
+          completed: "Hoàn thành"
       question:
         question_type:
           single_choice: "Một lựa chọn"
           multiple_choice: "Nhiều lựa chọn"
+
+    errors:
+      models:
+        user:
+          attributes:
+            birthday:
+              too_old: "phải nằm trong vòng 100 năm trở lại"
+              in_future: "không được nằm trong tương lai"
+            password:
+              password_blank: "không được để trống nếu đã cung cấp xác nhận mật khẩu"
