--- a/config/locales/users/users.en.yml
+++ b/config/locales/users/users.en.yml
@@ -1,5 +1,8 @@
 en:
   users:
+    not_found: "User not found"
+    please_log_in: "Please log in to access this page."
+    cannot_edit: "You cannot edit this user profile."
     create:
       created: "User was successfully created."
     please_log_in: "Please log in to access this page."
@@ -7,8 +10,37 @@ en:
       not_found: "User not found"
     new:
       title: "Sign up"
+      select_gender: "Select gender"
       confirmation: "Password confirmation"
       create_my_account: "Create my account"
     show:
+      edit: "Edit profile"
+      email: "Email"
+      birthday: "Birthday"
+      gender: "Gender"
+      genders:
+        male: "Male"
+        female: "Female"
+        other: "Other"
       created_at: "Created at"
       updated_at: "Updated at"
+      filter_by_status: "Filter by status"
+      all_status: "All"
+      filter: "Filter"
+      course_name: "Course name"
+      status: "Status"
+      my_courses: "My courses"
+      no_courses_in_status: "No courses in %{status} status"
+      no_courses: "No courses"
+      status:
+        pending: "Pending"
+        approved: "Approved"
+        rejected: "Rejected"
+        in_progress: "In Progress"
+        completed: "Completed"
+    edit:
+      title: "Edit user"
+      save_changes: "Save changes"
+      change_gravatar: "change"
+    update:
+      updated: "Profile was successfully updated."
