91173/hotfix-google-login

--- a/config/locales/base/base.en.yml
+++ b/config/locales/base/base.en.yml
@@ -1,7 +1,7 @@
 en:
   layouts:
     application:
-      title: "Ruby on Rails Tutorial Sample App"
+      title: "SJP E-learning System"
 
     footer:
       brand_name: "SJP E-learning"
